fix: #74 상품 스웨거 설정